[gd_scene load_steps=23 format=3 uid="uid://ddk1xj36kbjux"]

[ext_resource type="Script" uid="uid://c2thf4vknqnnq" path="res://summoned_roles/scripts/scenex.gd" id="1_3c5wo"]
[ext_resource type="Texture2D" uid="uid://btj7sykmql48o" path="res://summoned_roles/assets/scene/SummonedRolesBGempty.png" id="2_3ywxj"]
[ext_resource type="PackedScene" uid="uid://ce3lfyqf84qt" path="res://summoned_roles/scenes/card_overlay.tscn" id="2_s66tr"]
[ext_resource type="Script" uid="uid://2bh70d8bkfbt" path="res://addons/godot_card_layout/layouts/hand_layout/gcard_hand_layout.gd" id="2_w1nso"]
[ext_resource type="Texture2D" uid="uid://bs1tpy5v8v8r7" path="res://summoned_roles/assets/scene/SummonedRolesTitle.png" id="3_bmdq7"]
[ext_resource type="Theme" uid="uid://de5noq4budj6f" path="res://summoned_roles/themes_fx/info_ui_theme.tres" id="4_bmdq7"]
[ext_resource type="FontFile" uid="uid://do0av1yoxn0dg" path="res://summoned_roles/themes_fx/Avqest.ttf" id="4_s66tr"]
[ext_resource type="StyleBox" uid="uid://dw25qutuxlpgh" path="res://summoned_roles/themes_fx/stylebox_glow.tres" id="5_s66tr"]
[ext_resource type="FontFile" uid="uid://dfu2gmi572xw7" path="res://summoned_roles/themes_fx/Civane_Normal.otf" id="5_v3a2q"]
[ext_resource type="Script" uid="uid://b2b58kkyq3tpv" path="res://summoned_roles/scripts/card_slot.gd" id="6_v3a2q"]
[ext_resource type="Texture2D" uid="uid://cveymcyn4lhyo" path="res://summoned_roles/assets/UI/sample_card/button_cardinfo.png" id="7_biop1"]
[ext_resource type="AudioStream" uid="uid://cx8kkpkngtaym" path="res://summoned_roles/themes_fx/audio/christmas-chimes-whoosh-264365.mp3" id="7_jmg56"]
[ext_resource type="Texture2D" uid="uid://rwjd2mnbb62d" path="res://summoned_roles/assets/UI/sample_card/SampleCard-CardOnly.png" id="13_rntck"]
[ext_resource type="Texture2D" uid="uid://8aw3b1f1nkip" path="res://summoned_roles/assets/UI/sample_card/SampleCard-Descriptors-All.png" id="14_dw1rh"]
[ext_resource type="Texture2D" uid="uid://c7jjww7p2kl0u" path="res://summoned_roles/assets/UI/sample_card/button-exit.png" id="15_cw2do"]
[ext_resource type="Texture2D" uid="uid://b35kkfqn5bx8l" path="res://summoned_roles/assets/UI/buttons/SoundOn.png" id="16_dw1rh"]
[ext_resource type="Texture2D" uid="uid://btbxqlharqyk2" path="res://summoned_roles/assets/UI/buttons/SoundOff.png" id="17_cw2do"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r3gov"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v48q3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmlmh"]
bg_color = Color(0.756863, 1, 1, 0.0196078)
shadow_color = Color(1, 1, 1, 0.501961)
shadow_size = 12

[sub_resource type="Theme" id="Theme_54ev7"]
Button/styles/disabled = SubResource("StyleBoxEmpty_r3gov")
Button/styles/focus = SubResource("StyleBoxEmpty_v48q3")
Button/styles/hover = SubResource("StyleBoxFlat_tmlmh")

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_biop1"]
loop = false

[node name="SceneX" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3c5wo")
overlay_packed = ExtResource("2_s66tr")

[node name="BG" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(1366, 768)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BGZoom" type="TextureRect" parent="BG"]
self_modulate = Color(0.321728, 0.321728, 0.321728, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -907.0
offset_top = -573.0
offset_right = 801.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_3ywxj")
expand_mode = 1
stretch_mode = 5

[node name="TitleClip" type="Control" parent="BG"]
clip_contents = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 94.0
grow_horizontal = 2
mouse_filter = 2

[node name="Title" type="TextureRect" parent="BG/TitleClip"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 21.0
offset_bottom = 131.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("3_bmdq7")
expand_mode = 1
stretch_mode = 5

[node name="SetTitle" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 89.0
offset_bottom = 139.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_s66tr")
theme_override_font_sizes/font_size = 40
text = "placeholder setname"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SetDef" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 131.0
offset_bottom = 162.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_v3a2q")
theme_override_font_sizes/font_size = 24
text = "placeholder def"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
offset_left = 16.0
offset_top = 12.0
offset_right = 347.0
offset_bottom = 189.0

[node name="CardInfo" type="TextureButton" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = SubResource("Theme_54ev7")
texture_normal = ExtResource("7_biop1")
texture_hover = ExtResource("7_biop1")
ignore_texture_size = true
stretch_mode = 4

[node name="HoverHelpText" type="RichTextLabel" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/shadow_outline_size = 1
theme_override_constants/line_separation = -4
theme_override_fonts/normal_font = ExtResource("4_s66tr")
theme_override_font_sizes/normal_font_size = 21
text = "Summon a role  > > > 
to see her talent cards, or seek wisdom in the Card Guide (?)."
fit_content = true
vertical_alignment = 1

[node name="GCardHandLayout" type="Control" parent="." node_paths=PackedStringArray("hover_sound")]
layout_mode = 1
anchors_preset = 0
offset_left = 524.0
offset_top = 231.0
offset_right = 558.0
offset_bottom = 256.0
script = ExtResource("2_w1nso")
dynamic_radius_factor = 620.0
circle_percentage = 0.06
animation_time = 0.2
hover_sound = NodePath("../AudioStreamPlayer2D")
metadata/_custom_type_script = "uid://2bh70d8bkfbt"

[node name="Back1" type="TextureRect" parent="GCardHandLayout"]
layout_mode = 0
offset_left = -464.706
offset_top = 43.9277
offset_right = -138.706
offset_bottom = 510.595
rotation = -0.188496
pivot_offset = Vector2(163, 233.333)
expand_mode = 1
stretch_mode = 4

[node name="Button_1" type="Button" parent="GCardHandLayout/Back1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_bmdq7")
theme_override_styles/hover = ExtResource("5_s66tr")
script = ExtResource("6_v3a2q")

[node name="Back2" type="TextureRect" parent="GCardHandLayout"]
layout_mode = 0
offset_left = -155.72
offset_top = 4.8938
offset_right = 170.28
offset_bottom = 471.561
rotation = -0.0628319
pivot_offset = Vector2(163, 233.333)
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Button_2" type="Button" parent="GCardHandLayout/Back2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_bmdq7")
theme_override_styles/hover = ExtResource("5_s66tr")
script = ExtResource("6_v3a2q")
card_id = 2

[node name="Back3" type="TextureRect" parent="GCardHandLayout"]
layout_mode = 0
offset_left = 155.72
offset_top = 4.8938
offset_right = 481.72
offset_bottom = 471.561
rotation = 0.0628319
pivot_offset = Vector2(163, 233.333)
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Button_3" type="Button" parent="GCardHandLayout/Back3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_bmdq7")
theme_override_styles/hover = ExtResource("5_s66tr")
script = ExtResource("6_v3a2q")
card_id = 3

[node name="Back4" type="TextureRect" parent="GCardHandLayout"]
layout_mode = 0
offset_left = 464.706
offset_top = 43.9277
offset_right = 790.706
offset_bottom = 510.595
rotation = 0.188496
pivot_offset = Vector2(163, 233.333)
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Button_4" type="Button" parent="GCardHandLayout/Back4"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.971
offset_right = 3.05176e-05
offset_bottom = -0.134003
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_bmdq7")
theme_override_styles/hover = ExtResource("5_s66tr")
script = ExtResource("6_v3a2q")
card_id = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jmg56")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_biop1")
volume_db = -4.0

[node name="CardInfoOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_right = 1366.0
offset_bottom = 768.0
pivot_offset = Vector2(683, 384)
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="PanelBG" type="Panel" parent="CardInfoOverlay"]
custom_minimum_size = Vector2(1100, 768)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00146413
anchor_right = 0.806735
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_bmdq7")
metadata/_edit_use_anchors_ = true

[node name="CardSample" type="TextureRect" parent="CardInfoOverlay"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = -1
offset_left = 253.0
offset_top = 172.0
offset_right = 572.0
offset_bottom = 638.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("13_rntck")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="DescriptionsAll" type="TextureRect" parent="CardInfoOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.07
anchor_right = -0.07
offset_left = -0.379997
offset_right = 1365.62
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("14_dw1rh")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ButtonExit" type="TextureButton" parent="CardInfoOverlay"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 15.0
offset_right = -280.0
offset_bottom = 95.0
grow_horizontal = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("15_cw2do")
ignore_texture_size = true
stretch_mode = 4

[node name="ButtonHome" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -82.0
offset_top = 16.0
offset_right = -14.0
offset_bottom = 93.0
grow_horizontal = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("4_bmdq7")
texture_normal = ExtResource("15_cw2do")
texture_hover = ExtResource("15_cw2do")
ignore_texture_size = true
stretch_mode = 5

[node name="ButtonSound" type="TextureButton" parent="."]
offset_left = 1198.0
offset_top = 26.0
offset_right = 1256.0
offset_bottom = 85.0
toggle_mode = true
texture_normal = ExtResource("16_dw1rh")
texture_pressed = ExtResource("17_cw2do")
ignore_texture_size = true
stretch_mode = 5

[connection signal="mouse_entered" from="BG/VBoxContainer/CardInfo" to="." method="_on_card_info_mouse_entered"]
[connection signal="mouse_exited" from="BG/VBoxContainer/CardInfo" to="." method="_on_card_info_mouse_exited"]
[connection signal="pressed" from="BG/VBoxContainer/CardInfo" to="." method="_on_card_info_pressed"]
[connection signal="pressed" from="CardInfoOverlay/ButtonExit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="ButtonHome" to="." method="_on_button_home_pressed"]
[connection signal="toggled" from="ButtonSound" to="." method="_on_button_sound_toggled"]
